# deadtrees

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  createbalanced.py  createdataset.py  createmasks.py  docker-compose.yml  dvc.yaml  environment.yml  eval.py  merge_prediction_tiles.sh  params.yaml  preprocessing.py  process_all_gpu.sh  protocol.md  pyproject.toml  run.py  setup.py  start-agent.sh  sweep.yaml  sweep_slurm.py  sweep_slurm.sbatch  train.py
.dvc/: config
.github/workflows/: main.yml
checkpoints/: .gitignore  bestmodel.ckpt.dvc  bestmodel.txt
conf/: config.yaml
conf/callbacks/: default.yaml  default_callbacks.yaml  wandb_callbacks.yaml
configs/: config.yaml
data/: .gitignore  processed.lus.2017.dvc  processed.lus.2019.dvc
deadtrees/: __init__.py  __main__.py  constants.py  train.py  utils.py
docker/: backend.Dockerfile  frontend.Dockerfile  requirements-backend.txt  requirements-frontend.txt
dockerfiles/: Dockerfile.backend  Dockerfile.frontend  requirements-frontend.txt
notebooks/: 00-Autoencoder-training.ipynb  01-Training.ipynb  02-Inference.ipynb
scripts/: README.MD  aggregate_results.py  computestats.py  computestats_inference.py  create_onnx.py  createbalanced.py  createdataset.py  createextra.py  createforestmasks.py  createmasks.py  inference.py  mergedatasets.py  train.py
src/: __init__.py  __main__.py  checkpoint.py  constants.py  train.py
tests/: test_createdataset.py  test_data_splitting.py  test_dice_metric.py  test_inference.py  test_tiler.py  test_webdataloader.py
(+101 files in other folders)
