[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = [
    "PIL",
    "geopandas",
    "hydra",
    "matplotlib",
    "numpy",
    "omegaconf",
    "pandas",
    "pl_bolts",
    "pytorch_lightning",
    "rioxarray",
    "setuptools",
    "shapely",
    "skimage",
    "torch",
    "torchvision",
    "tqdm",
    "typing_extensions",
    "xarray",
]
profile = "black"
line_length = 88
force_sort_within_sections = false
order_by_type = false
multi_line_output = 3
include_trailing_comma = true
